Fix result icon was not aligned #886

--- a/src/app/hypermedia-view/actions-view/file-upload-action/file-upload-action.component.scss
+++ b/src/app/hypermedia-view/actions-view/file-upload-action/file-upload-action.component.scss
@@ -17,17 +17,26 @@
   max-width: 150px;
 }
 
+.hoverButton:hover{
+  opacity: 0.8;
+}
+
 .containerElement {
   margin-right: $defaultSpacing;
 }
 
-.resultIconContainer {
+.resultContainer {
   display: flex;
+  flex-direction: row;
   align-items: center;
+
   height: $defaultRowHeigth;
   margin-right: $defaultSpacing+$defaultSpacing;
   margin-left:  $defaultSpacing;
-  padding: 0;
+}
+
+.resultIconContainer {
+  margin-right: $defaultSpacing;
 }
 
 .mat-expansion-panel-header-title {
@@ -35,10 +44,12 @@
 }
 
 .buttonRow {
-  margin-top: $defaultSpacing;
-  height: $defaultRowHeigth;
   display: flex;
   flex-direction: row;
+  align-items: center;
+
+  height: $defaultRowHeigth;
+  margin-top: $defaultSpacing;
 }
 
 .fileIcon {
